--- a/IRC/templates/base.html
+++ b/IRC/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	<head>
-		<title>{% block title %}Base Title{% endblock %}</title>
+		<title>{% block title %}IRC Portal{% endblock %}</title>
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -25,7 +25,11 @@
 				<div class="navbar-default sidebar" role="navigation">
 					<div class="sidebar-nav navbar-collapse">
 						<ul class="nav" id="side-menu">
-							{% block sidebarLinks %}{% endblock %}
+								{% if user.is_authenticated %}
+									<li><a href="{% url 'assessmentsListView' %}">Assessments</a></li>
+									<li><a href="{% url 'protectionItemsListView' %}">Protection Items</a></li>
+									<li><a href="{% url 'unitsListView' %}">Units</a></li>
+								{% endif %}
 								<!-- /.nav-second-level -->
 						</ul>
 					</div>
