Added Standard Assessment to side menu and included an entry for the Standard Assessment Number

--- a/IRC/templates/base.html
+++ b/IRC/templates/base.html
@@ -29,6 +29,7 @@
 									<li><a href="{% url 'assessmentsListView' %}">Assessments</a></li>
 									<li><a href="{% url 'protectionItemsListView' %}">Protection Items</a></li>
 									<li><a href="{% url 'unitsListView' %}">Units</a></li>
+									<li><a href="{% url 'SAListView' %}">Standard Assessments</a></li>
 								{% endif %}
 								<!-- /.nav-second-level -->
 						</ul>
