--- a/IRC/templates/IRC/standardassessment_new.html
+++ b/IRC/templates/IRC/standardassessment_new.html
@@ -18,15 +18,22 @@
 	{%if user.is_authenticated %}
 		{% load widget_tweaks %}
 		<form method="POST" class="post-form form-horizontal">{% csrf_token %}
-			<a href="{% url 'SAListView' %}">Cancel</a>
+			<a href="{% url 'SAListView' %}">Back to List</a>
 			<div class="row">
-			<div class="col-md-8">
+			<div class="col-lg-5">
 			<table class="table">
-				<tr><td>{{form.title.label}}</td><td colspan="2">{{form.title|attr:"cols:30"|attr:"rows:2"}}</td></tr>
-				<tr><td>{{form.site.label}}</td><td colspan="2">{{form.site}}</td></tr>
-				<tr><td>{{form.unit.label}}</td><td colspan="2">{{form.unit}}</td></tr>
+				<tr><td>{{form.number.label}}</td><td colspan="1">{{form.number|attr:"cols:30"|attr:"rows:2"}}</td></tr>
+				<tr><td>{{form.title.label}}</td><td colspan="1">{{form.title|attr:"cols:30"|attr:"rows:2"}}</td></tr>
+				<tr><td>{{form.site.label}}</td><td colspan="1">{{form.site}}</td></tr>
+				<tr><td>{{form.unit.label}}</td><td colspan="1">{{form.unit}}</td></tr>
+			</table>
+			</div>
+			</div>
+			<div class="row">
+			<div class="col-lg-8">
+			<table class="table">
 				<tr><td colspan="3"><h2>Probability of Loss</h2></td></tr>
-				<tr class="head"><td colspan="3"><h4>Let it Burn</h4></td></tr>
+				<tr class="head"><td colspan="3"><h4>Base Case</h4></td></tr>
 				<tr class="PL1"><td># of Similar Equipment</td><td>{{form.L_PL_adjCopy|attr:"onchange:calcFreq( document.getElementById('id_L_PL_adjCopy').value,document.getElementById('id_L_PL_baseFreq').value,document.getElementById('id_L_PL_adjFreq').value, 'id_L_PL_freq' )"}}</td><td>{{form.L_PL_adjCopy_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
 				<tr class="PL2"><td>Basic Frequency</td><td>{{form.L_PL_baseFreq|attr:"onchange:calcFreq( document.getElementById('id_L_PL_adjCopy').value,document.getElementById('id_L_PL_baseFreq').value,document.getElementById('id_L_PL_adjFreq').value, 'id_L_PL_freq')"}}</td><td>{{form.L_PL_baseFreq_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
 				<tr class="PL1"><td>Adjustment Factor (x.y)</td><td>{{form.L_PL_adjFreq|attr:"onchange:calcFreq( document.getElementById('id_L_PL_adjCopy').value,document.getElementById('id_L_PL_baseFreq').value,document.getElementById('id_L_PL_adjFreq').value, 'id_L_PL_freq')"}}</td><td>{{form.L_PL_adjFreq_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
@@ -50,7 +57,7 @@
 				
 				<tr><td colspan="3"><h2>Phyiscal Damage Assessment</h2></td></tr>
 				
-				<tr class="head"><td colspan="3"><h4>Let it Burn</h4></td></tr>
+				<tr class="head"><td colspan="3"><h4>Base Case</h4></td></tr>
 				<tr class="PL1"><td>Value at Risk ($)</td><td>{{form.L_PDA_valueAtRisk|attr:"onchange:calcPDASubDmg( document.getElementById('id_L_PDA_valueAtRisk').value,document.getElementById('id_L_PDA_dmgFactor').value,document.getElementById('id_L_PDA_addDmgs').value, 'id_L_PDA_subTotalDmgs' )"}}</td><td>{{form.L_PDA_valueAtRisk_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
 				<tr class="PL2"><td>Damage Spread Factor (x.y)</td><td>{{form.L_PDA_dmgFactor|attr:"onchange:calcPDASubDmg( document.getElementById('id_L_PDA_valueAtRisk').value,document.getElementById('id_L_PDA_dmgFactor').value,document.getElementById('id_L_PDA_addDmgs').value, 'id_L_PDA_subTotalDmgs' )"}}</td><td>{{form.L_PDA_dmgFactor_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
 				<tr class="PL1"><td>Value of Additional Damage ($)</td><td>{{form.L_PDA_addDmgs|attr:"onchange:calcPDASubDmg( document.getElementById('id_L_PDA_valueAtRisk').value,document.getElementById('id_L_PDA_dmgFactor').value,document.getElementById('id_L_PDA_addDmgs').value, 'id_L_PDA_subTotalDmgs' )"}}</td><td>{{form.L_PDA_addDmgs_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
@@ -89,7 +96,7 @@
 				
 				<tr><td colspan="3"><h2>Business Interruption Estimate</h2></td></tr>  
 				
-				<tr class="head"><td colspan="3"><h4>Let it Burn</h4></td></tr>
+				<tr class="head"><td colspan="3"><h4>Base Case</h4></td></tr>
 				<tr class="PL1"><td>Daily Business Interruption Value ($/day)</td><td>{{form.L_BIE_annBIEValue}}</td><td>{{form.L_BIE_annBIEValue_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
 				<tr class="PL2"><td>Full Equivalent Production Days Lost (days)</td><td>{{form.L_BIE_fullProdDaysLost|attr:"onchange:calcTotalDays(document.getElementById('id_L_BIE_fullProdDaysLost').value,document.getElementById('id_L_BIE_addProdDaysLost').value,'id_L_BIE_totalDaysLost' )"}}</td><td>{{form.L_BIE_fullProdDaysLost_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>				
 				<tr class="PL1"><td>Additonal Equivalent Production Days Lost (days)</td><td>{{form.L_BIE_addProdDaysLost|attr:"onchange:calcTotalDays(document.getElementById('id_L_BIE_fullProdDaysLost').value,document.getElementById('id_L_BIE_addProdDaysLost').value,'id_L_BIE_totalDaysLost' )"}}</td><td>{{form.L_BIE_addProdDaysLost_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>				
@@ -130,7 +137,7 @@
 				<tr class="PL1"><td>Total BI Losses ($)</td><td>{{form.FM_BIE_totalBIE|attr:"onfocus:calcTotalBI(document.getElementById('id_FM_BIE_other').value,document.getElementById('id_FM_BIE_directBILoss').value,'id_FM_BIE_totalBIE' )"|attr:"class:calc"}}<div onclick="calcTotalBI(document.getElementById('id_FM_BIE_other').value,document.getElementById('id_FM_BIE_directBILoss').value,'id_FM_BIE_totalBIE' )" style="color:red; background-color:black"><b>Click to Calculate</b></div></td><td>{{form.FM_BIE_totalBIE_desc|attr:"class:calc"|attr:"cols:40"|attr:"rows:2"}}</td></tr>
 				 
 				<tr><td colspan="3"><h2>Other Losses</h2></td></tr>  
-				<tr class="head"><td colspan="3"><h4>Let it Burn</h4></td></tr>
+				<tr class="head"><td colspan="3"><h4>Base Case</h4></td></tr>
 				<tr class="PL1"><td>Third Party Smoke Plume Effects</td><td>{{form.L_OL_smokePlume}}</td><td>{{form.L_OL_smokePlume_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
 				<tr class="PL2"><td>Disposal of MEOH Contaminated Foam</td><td>{{form.L_OL_MEOHDisposal}}</td><td>{{form.L_OL_MEOHDisposal_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
 				<tr class="PL1"><td>Shareholder and Partner Relations</td><td>{{form.L_OL_shareholderPartnerRel}}</td><td>{{form.L_OL_shareholderPartnerRel_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>
@@ -174,7 +181,7 @@
 				<tr class="PL1"><td>Life Expectency (years)</td><td>{{form.COP_lifeTime}} 
 				<tr class="PL2"><td>Interest Rate (0.xx)</td><td>{{form.COP_interestRate}} 
 				
-				<tr class="head"><td colspan="3"><h4>Let it Burn</h4></td></tr>  
+				<tr class="head"><td colspan="3"><h4>Base Case</h4></td></tr>  
 				<tr class="PL1"><td>Total Equipment Capital Cost ($)</td><td>{{form.L_COP_totalCapEx}}</td><td>{{form.L_COP_totalCapEx_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>				
 				<tr class="PL2"><td>Areas Serviced (x)</td><td>{{form.L_COP_areasServiced}}</td><td>{{form.L_COP_areasServiced_desc|attr:"cols:40"|attr:"rows:2"}}</td></tr>				
 				<tr class="PL1"><td>Equipment Capital Cost for this Area ($)</td><td>{{form.L_COP_arealCapEx|attr:"onfocus:calcArealCapEx(document.getElementById('id_L_COP_totalCapEx').value,document.getElementById('id_L_COP_areasServiced').value,'id_L_COP_arealCapEx')"|attr:"class:calc"}}<div onclick="calcArealCapEx(document.getElementById('id_L_COP_totalCapEx').value,document.getElementById('id_L_COP_areasServiced').value,'id_L_COP_arealCapEx')" style="color:red; background-color:black"><b>Click to Calculate</b></div></td><td>{{form.L_COP_arealCapEx_desc|attr:"class:calc"|attr:"cols:40"|attr:"rows:2"}}</td></tr>						
@@ -234,7 +241,7 @@
 				<table class="table">
 					<thead>
 						<th></th>
-						<th>Let it Burn</th>
+						<th>Base Case</th>
 						<th>Fixed</th>
 						<th>Mobile</th>
 						<th>Fixed and Mobile</th>
@@ -292,7 +299,7 @@
 					<div class="col-lg-9">{{form.summary_CaseDesc|attr:"cols:60"|attr:"rows:3"}}</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-2 col-lg-offset-1"><h4>Let it Burn</h4></div>
+					<div class="col-lg-2 col-lg-offset-1"><h4>Base Case</h4></div>
 					<div class="col-lg-9">{{form.summary_L|attr:"cols:60"|attr:"rows:3"}}</div>
 				</div>
 				<div class="row">
